third_party/move/move-compiler-v2/tests/checking/typing/recursive_structs.exp

Diagnostics:
error: cyclic data3
  ┌─ tests/checking/typing/recursive_structs.move:4:5
  │
4 │     struct Foo { f: Foo }
  │     ^^^^^^^^^^^^^^^^^^^^^
  │
  = `Foo` contains field `f: Foo`, which forms a cycle.

error: cyclic data
  ┌─ tests/checking/typing/recursive_structs.move:7:5
  │
7 │     struct Bar { f: Cup<Bar> }
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  │                  │
  │                  invalid field f of Bar containing Bar itself
